fix: rest convention for api routes
